# obs-studio

./: .gitmodules
UI/: window-basic-main.cpp  window-basic-settings.hpp
cmake/common/: helpers_common.cmake
plugins/: CMakeLists.txt
plugins/opera-plugin/: CMakeLists.txt  color-source.c
plugins/opera-plugin/data/locale/: en-US.ini
plugins/sink-source/: CMakeLists.txt  sink-file-util.c  sink-image-util.c  sink-image-util.cpp  sink-socket.c  sink-socket.cpp  sink-socket.hpp  sink-source.c  sink-source.cpp  sink-source.h  sink-source.hpp
plugins/sink-source/cmake/windows/: obs-module.rc.in
